force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/ucinn_ascendv2__Work_Plan__c.object-meta.xml
<CustomObject>
    <description>High level overview or goal metrics for a particular unit/division/school. This is what fundraisers/development officers are measured against per FY. It includes their fundraising goals, # of visits/contact expectations.</description>
    <label>Work Plan</label>
    <nameField>
        <label>Work Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>