force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Amount_of_Proposals_Funded_Closed__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_of_Proposals_Funded_Closed__c</fullName>
    <label>Amount of Proposals Funded (Closed)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>