force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Annual_Giving_Goal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Annual_Giving_Goal__c</fullName>
    <label>Annual Giving Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>