force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Comprehensive_Fiscal_Year_Goal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comprehensive_Fiscal_Year_Goal__c</fullName>
    <inlineHelpText>Total raised from proposal-based solicitations and all other commitments to benefit the Department</inlineHelpText>
    <label>Comprehensive Fiscal Year Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>