force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Endowment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Endowment__c</fullName>
    <inlineHelpText>Program, Endowment, and Capital must total Proposal-Based FY Goal</inlineHelpText>
    <label>Endowment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>