force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>