force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Fiscal_Year_Proposal_Submissions__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fiscal_Year_Proposal_Submissions__c</fullName>
    <inlineHelpText>Total amount of submitted and declined MG and AF proposals for FY</inlineHelpText>
    <label>Fiscal Year Proposal Submissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>