force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Major_Gifts_Proposal_Dollar_Amount__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Major_Gifts_Proposal_Dollar_Amount__c</fullName>
    <label>Major Gift Proposal Dollar Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>