force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Number_of_Prospects_Qualified__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Number_of_Prospects_Qualified__c</fullName>
    <label>Number of Prospects Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>