force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Percent_of_Portfolio_with_Strategy__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Percent_of_Portfolio_with_Strategy__c</fullName>
    <label>Percent of Portfolio with Strategy</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>