force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Percent_Prospects_with_Fundraiser_Rating__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Percent_Prospects_with_Fundraiser_Rating__c</fullName>
    <label>Percent Prospects with Fundraiser Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>