force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Percent_Time_Allotted_to_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Percent_Time_Allotted_to_Fundraising__c</fullName>
    <inlineHelpText>This is a percentage</inlineHelpText>
    <label>Percent Time Allotted to Fundraising</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>