force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Proposal_Based_Fiscal_Year_Goal__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Proposal_Based_Fiscal_Year_Goal__c</fullName>
    <inlineHelpText>Expected total commitment from proposal-based solicitations. Should include open proposals from previous fiscal year that will close in current fiscal year.</inlineHelpText>
    <label>Proposal-Based Fiscal Year Goal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>