force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Role__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Role__c</fullName>
    <description>CDO: Chief Development Officer
CFR: Corporate and Foundation Relations
LAGM: Leadership Annual Giving Manager
MGO: Major Gift Officer</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDO</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>LAGM</fullName>
            </value>
            <value>
                <fullName>MGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>