force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Total_Face_to_Face_Visits__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Face_to_Face_Visits__c</fullName>
    <label>Total Face-to-Face Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>