force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Total_Faculty_Member_Assignments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Faculty_Member_Assignments__c</fullName>
    <label>Total Faculty Member Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>