force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Total_Major_Gift_Solicitations__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Major_Gift_Solicitations__c</fullName>
    <label>Total Major Gift Solicitations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>