force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Total_MG_Prospects_from_Faculty_Referral__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_MG_Prospects_from_Faculty_Referral__c</fullName>
    <inlineHelpText>Total Number of Prospects Qualified through Faculty Referrals</inlineHelpText>
    <label>Total MG Prospects from Faculty Referral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>