force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Total_Substantive_Contacts__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Total_Substantive_Contacts__c</fullName>
    <label>Total Substantive Contacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>