force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/fields/ucinn_ascendv2__Work_Plan_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Name_Auto_Number__c</fullName>
    <displayFormat>WP-{0000000}</displayFormat>
    <label>Work Plan Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>