force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/recordTypes/ucinn_ascendv2__Gift_Officer_Goals.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Gift_Officer_Goals</fullName>
    <active>true</active>
    <description>Used for individual HSC gift officer goals.</description>
    <label>HSC Gift Officer Goals</label>
</RecordType>