force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/recordTypes/ucinn_ascendv2__University_Advancement_Goals.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__University_Advancement_Goals</fullName>
    <active>true</active>
    <description>Used for all units except School of Medicine.</description>
    <label>University Advancement Goals</label>
</RecordType>