force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/validationRules/ucinn_ascendv2__Goal_Must_Equal_Prog_Endow_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Goal_Must_Equal_Prog_Endow_Cap</fullName>
    <active>true</active>
    <description>Capital + endowment + program must equal proposal based FY goal.</description>
    <errorConditionFormula>$Setup.ucinn_ascendv2__Bypass_Settings__c.ucinn_ascendv2__Bypass_Validation_Rules__c &lt;&gt; TRUE &amp;&amp;
(ucinn_ascendv2__Capital__c + ucinn_ascendv2__Endowment__c + ucinn_ascendv2__Current_Use__c) &lt;&gt; ucinn_ascendv2__Proposal_Based_Fiscal_Year_Goal__c &amp;&amp;
OR(
RecordType.DeveloperName = &quot;Work_Plan_unit_goals&quot;,
RecordType.DeveloperName = &quot;Gift_Officer_Goals&quot;
)&amp;&amp;
RecordType.NamespacePrefix = &apos;ucinn_ascendv2&apos;</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Proposal_Based_Fiscal_Year_Goal__c</errorDisplayField>
    <errorMessage>Capital + endowment + program must equal proposal based FY goal.</errorMessage>
</ValidationRule>