force-app/main/default/objects/ucinn_ascendv2__Work_Plan__c/listViews/ucinn_ascendv2__All_Work_Plans.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All_Work_Plans</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Work Plans</label>
</ListView>